Prevent background noise from overflowing hero bounds

--- a/css/main.scss
+++ b/css/main.scss
@@ -400,6 +400,12 @@ a {
   width: 100%;
   height: 580px;
   background: url('../images/static_bg.gif') repeat top left;
+  
+  @media (min-width: 992px) {
+      left: 10px;
+      right: 10px;
+      width: auto;
+  }
 }
 
 #hero {
